# quality-gate-stream

./: .gitignore  .lia.cache  AGENT.md  AGENTS.md  CCC-SYSTEM-PROMPT.md  CONTEXT-REFERENCE.md  CREDENTIALS.md  FLEET-SERVER-TODO.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  NEXT-ACTION.md  NIGHT-SHIFT-PLAN.md  PLATO-FIRST.md  README.md  STATUS.md  TODO.md  TOOLS.md  USER.md  check_arch  docs-cross-plane-protocol.json  docs-paper-abstraction-planes.md  docs-paper-lock-algebra.md  docs-polyglot-flux-hypothesis.md  docs-research-roadmap-10experiments.md  docs-siliconflow-models.md  purplepincher-architecture.md  pyproject.toml  taskboard.md
.openclaw/: workspace-state.json
assets/: cocapn-lighthouse.scad
cocapn-profile/: FORK-LIST.md  README.md  fork-to-cocapn.sh
data/: activelog-app.html  agent-launcher.html  cocapn-live.html  dev-portal.html  embedded-fleet-data.json  fishinglog-app.html  fleet-categorization.json  fleet-data-section.txt  oracle1-beachcomb-state.json  plato-matrix-bridge.json  purplepincher-clean.html  studylog-app.html  tiles.jsonl
docs/: DEADBAND-PROTOCOL.md  PLATO-INTEGRATION-MAP.md  THE-SECOND-BRAIN.md  fleet-index.html  fleet-synergy-matrix.md  jc1-deep-study-knowledge-transfer.md  neural-plato-boot-radio-roadmap.md  onboarding-boarder.md
for-fleet/: forgemaster-2026-04-29-pivot.i2i
memory/: 2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-24-fleet-comms.md  2026-04-24.md  2026-04-25-0530.md  2026-04-25-repo-audit.md  2026-04-25.md  (+12 more)
(+562 files in other folders)
